--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,23 @@
-.App {
-  text-align: center;
+html, body, .root, #map {
+  height: 100vh;
+  width: 100%;
+  margin: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+body, .app {
+  background: #fff;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+#container {
+  margin: 0;
+  padding: 0;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#map {
+  position: relative;
+  height: 100vh !important;
+  min-height: 100%;
+  max-height: none;
+  width: 100%;
+  margin: 0;
 }
