--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
-html, body, .root, #map {
-  height: 100vh;
-  width: 100%;
-  margin: 0;
+html, body, .root {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 body, .app {
@@ -11,13 +16,22 @@ body, .app {
 #container {
   margin: 0;
   padding: 0;
+  display: flex;
 }
 
 #map {
+  overflow: hidden;
   position: relative;
-  height: 100vh !important;
-  min-height: 100%;
-  max-height: none;
-  width: 100%;
+  height: 100vh;
+  width: 75%;
   margin: 0;
+}
+
+.options-box {
+  height: 100vh;
+  width: 25%;
+  padding: 1em;
+  text-align: center;
+  color: #7e8ea5;
+  background: #f9f9f9;
 }
