--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,22 @@ body, .app {
   background: #f9f9f9;
 }
 
+.search-box {
+  width: 70%;
+  background-color: #f9f9f9;
+  border-radius: 0.4em;
+  padding: 0.4em;
+}
+
+.search-box::placeholder {
+  color: #ccc;
+}
+
+.search-box:hover {
+  background-color: #fff;
+  font-style: italic;
+}
+
 .list {
   list-style-type: none;
   text-align: left;
