--- a/src/App.css
+++ b/src/App.css
@@ -153,6 +153,10 @@ body, .app {
   color: #7e8ea5;
 }
 
+.fs {
+  font-size: 0.8em;
+}
+
 /*-------------------------- media queries --------------------------*/
 @media screen and (max-width: 425px) {
   .header-title {
